<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5sp"
    android:layout_marginHorizontal="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/todoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:buttonTint="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tache"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/jj_mm_aaaa"
                android:textColorHint="#757575" />
        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/supprimer"
            android:textColor="#6D4C41" />

    </LinearLayout>
</androidx.cardview.widget.CardView>